# satisfactorymap

./: .gitignore  .gitmodules  CONTRIBUTING.md  NOTICES.md  README.md  TODO.md  build.sh  build_menu_categories.json  categorize_buildables.html  requirements.txt  sftp_config.json.example  wrangler.jsonc
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: BENCHMARK.md  categoryLabels.json  categoryOverrides.json  chained-belt-delete.md  code-review-2026-07.md  copy_icons.py  extract_docs_json.py  extract_game_phases.py  extract_map_image.py  release-notes-0.1.5.md  release-notes-0.1.6.md  server-fetch.md  streaming-payload-builder.md  tauri-desktop-app.md
docs/superpowers/plans/: 2026-07-06-resizable-filter-panels.md
docs/superpowers/specs/: 2026-07-06-resizable-filter-panels-design.md
game_data/: SCHEMA.md  categoryOverrides.json  copy_icons.py  extract_docs_json.py  extract_game_phases.py  extract_map_image.py  extract_sav_data_tables.py  package_game_data.py
game_data/sav_data/: crashSites.json  freeDroppedItems.json  mercerSpheres.json  powerSlugs.json  readableNameCorrections.json  resourcePurity.json  somersloops.json  typePaths.json
map/: sav_map_data.py  sav_map_server.py  sav_parse_shim.py
map/static/map/: altitude.js  bottleneck.js  contextmenu.js  data.js  editor.js  filters.js  finditem.js  index.html  landing.css  landing.html  landing.js  map.css  map.js  panels.js  progression.js  save_client.js  selection.js  tooltip.js  webgl_layer.js  worker.js
patches/: sav_parse.py
rust_parser/: Cargo.toml  README.md  pyproject.toml
rust_parser/core/: Cargo.toml  build.rs
rust_parser/core/examples/: debug_object.rs  debug_ops.rs  dump_belt_items.rs  dump_payload.rs  dump_queries.rs  dump_sign.rs  index_size.rs
rust_parser/core/src/: decompress.rs  error.rs  extract.rs  level.rs  lib.rs  object.rs  properties.rs  reader.rs  save_header.rs  store.rs  version_data.rs
rust_parser/core/src/editor/: apply.rs  clipboard.rs  export.rs  mod.rs  ops.rs  rename.rs  session.rs
rust_parser/core/src/gamedata/: mod.rs
rust_parser/core/src/mapdata/: categories.rs  consts.rs  describe.rs  display.rs  geometry.rs  index.rs  jsonval.rs  mod.rs  names.rs  props.rs  queries.rs  scan.rs
rust_parser/core/src/mapdata/collectors/: buildings.rs  lines.rs  mod.rs  simple.rs  trains_progression.rs  world.rs
rust_parser/core/tests/: corrupt_input.rs  editor_clipboard.rs  editor_delete.rs  editor_duplicate.rs  editor_move.rs  editor_roundtrip.rs  lazy_objects.rs
rust_parser/py/: Cargo.toml
rust_parser/py/src/: lib.rs
rust_parser/py/src/py/: convert.rs  extract.rs  mod.rs
rust_parser/src/: decompress.rs  error.rs  level.rs  lib.rs  object.rs  properties.rs  store.rs  version_data.rs
rust_parser/src/py/: convert.rs  extract.rs  mod.rs
rust_parser/tauri/: .gitignore  Cargo.toml  tauri.conf.json
rust_parser/tauri/capabilities/: default.json
rust_parser/tauri/icons/: icon.icns
rust_parser/tauri/src/: lib.rs  main.rs  server_api.rs  session.rs
rust_parser/tauri/tests/: roundtrip.rs
rust_parser/wasm/: Cargo.toml
rust_parser/wasm/src/: lib.rs
tools/: bench_parse.py  benchmark.py  build_site.py  diff_parsers.py  diff_payload.py  e2e_editor.py  fetch_test_saves.py  release.py  serve_site.py
