[package]
name = "sav_tauri"
version = "0.1.4"
edition = "2021"
description = "Native desktop shell for the Satisfactory save map"
default-run = "sav_tauri"

# The session orchestration lives in a lib (tauri-free, just sav_core) so it can
# be exercised by integration tests without a webview; the bin is the thin Tauri
# command/IPC shell over it.
[lib]
name = "sav_tauri_lib"
path = "src/lib.rs"

[[bin]]
name = "sav_tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sav_core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
# Native OS-clipboard access for copy/paste blobs: WebView2's
# navigator.clipboard.readText pops a permission prompt on every paste.
arboard = { version = "3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Dedicated-server save fetch (src/server_api.rs). Blocking on purpose: the
# calls run on spawn_blocking threads, keeping the lib runtime-free.
reqwest = { version = "0.12", features = ["blocking", "json"] }
