[package]
name = "sav_wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "sav_wasm"
crate-type = ["cdylib"]

[dependencies]
# No "parallel": single-threaded wasm MVP.
sav_core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
rlsf = "0.2.2"

# tools/build_site.py compiles with -C target-feature=+simd128,+bulk-memory;
# wasm-opt must be told those features are in play.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd", "--enable-bulk-memory"]

# Profiling builds keep the name section for CPU profiles (wasm-opt strips
# it otherwise).
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
